--- a/publications.bib
+++ b/publications.bib
@@ -1,92 +1,79 @@
-
 @inproceedings{fuchs_meta-model_2021,
-	title = {A Meta-Model for Real-Time Fraud Detection in {ERP} Systems},
-	url = {https://aisel.aisnet.org/hicss-54/st/cyber_threat_intelligence/2},
-	booktitle = {Hawaii International Conference on System Sciences 2021 ({HICSS}-54)},
-	author = {Fuchs, Anna and Fuchs, Kevin and Gwinner, Fabian and Winkelmann, Axel},
-	date = {2021-01-04},
-	file = {AIS Electronic Library (AISeL) - Hawaii International Conference on System Sciences 2021 (HICSS-54)\: A Meta-Model for Real-Time Fraud Detection in ERP Systems:/Users/coeus/Zotero/storage/SMXDS6FD/2.html:text/html},
+	title        = {A Meta-Model for Real-Time Fraud Detection in {ERP} Systems},
+	author       = {Fuchs, Anna and Fuchs, Kevin and Gwinner, Fabian and Winkelmann, Axel},
+	booktitle    = {Hawaii International Conference on System Sciences 2021 ({HICSS}-54)},
+	url          = {https://aisel.aisnet.org/hicss-54/st/cyber_threat_intelligence/2},
+	date         = {2021-01-04},
 }
-
 @inproceedings{hofmann_industry-agnostic_2020,
-	title = {An Industry-Agnostic Approach for the Prediction of Return Shipments},
-	url = {https://aisel.aisnet.org/amcis2020/data_science_analytics_for_decision_support/data_science_analytics_for_decision_support/32},
-	booktitle = {{AMCIS} 2020 Proceedings},
-	author = {Hofmann, Adrian and Gwinner, Fabian and Fuchs, Kevin and Winkelmann, Axel},
-	date = {2020-08-10},
+	title        = {An Industry-Agnostic Approach for the Prediction of Return Shipments},
+	author       = {Hofmann, Adrian and Gwinner, Fabian and Fuchs, Kevin and Winkelmann, Axel},
+	booktitle    = {{AMCIS} 2020 Proceedings},
+	url          = {https://aisel.aisnet.org/amcis2020/data_science_analytics_for_decision_support/data_science_analytics_for_decision_support/32},
+	date         = {2020-08-10}
 }
-
 @inproceedings{tritscher_towards_2023,
-	location = {Cham},
-	title = {Towards Explainable Occupational Fraud Detection},
-	isbn = {978-3-031-23633-4},
-	doi = {10.1007/978-3-031-23633-4_7},
-	series = {Communications in Computer and Information Science},
-	abstract = {Occupational fraud within companies currently causes losses of around 5\% of company revenue each year. While enterprise resource planning systems can enable automated detection of occupational fraud through recording large amounts of company data, the use of state-of-the-art machine learning approaches in this domain is limited by their untraceable decision process. In this study, we evaluate whether machine learning combined with explainable artificial intelligence can provide both strong performance and decision traceability in occupational fraud detection. We construct an evaluation setting that assesses the comprehensibility of machine learning-based occupational fraud detection approaches, and evaluate both performance and comprehensibility of multiple approaches with explainable artificial intelligence. Our study finds that high detection performance does not necessarily indicate good explanation quality, but specific approaches provide both satisfactory performance and decision traceability, highlighting the suitability of machine learning for practical application in occupational fraud detection and the importance of research evaluating both performance and comprehensibility together.},
-	pages = {79--96},
-	booktitle = {Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
-	publisher = {Springer Nature Switzerland},
-	author = {Tritscher, Julian and Schlör, Daniel and Gwinner, Fabian and Krause, Anna and Hotho, Andreas},
-	editor = {Koprinska, Irena and Mignone, Paolo and Guidotti, Riccardo and Jaroszewicz, Szymon and Fröning, Holger and Gullo, Francesco and Ferreira, Pedro M. and Roqueiro, Damian and Ceddia, Gaia and Nowaczyk, Slawomir and Gama, João and Ribeiro, Rita and Gavaldà, Ricard and Masciari, Elio and Ras, Zbigniew and Ritacco, Ettore and Naretto, Francesca and Theissler, Andreas and Biecek, Przemyslaw and Verbeke, Wouter and Schiele, Gregor and Pernkopf, Franz and Blott, Michaela and Bordino, Ilaria and Danesi, Ivan Luciano and Ponti, Giovanni and Severini, Lorenzo and Appice, Annalisa and Andresini, Giuseppina and Medeiros, Ibéria and Graça, Guilherme and Cooper, Lee and Ghazaleh, Naghmeh and Richiardi, Jonas and Saldana, Diego and Sechidis, Konstantinos and Canakoglu, Arif and Pido, Sara and Pinoli, Pietro and Bifet, Albert and Pashami, Sepideh},
-	date = {2023},
-	langid = {english},
-	keywords = {Anomaly detection, {ERP}, Fraud detection, {XAI}},
-	file = {Full Text PDF:/Users/coeus/Zotero/storage/FMXWIMZA/Tritscher et al. - 2023 - Towards Explainable Occupational Fraud Detection.pdf:application/pdf},
+	title        = {Towards Explainable Occupational Fraud Detection},
+	author       = {Tritscher, Julian and Schlör, Daniel and Gwinner, Fabian and Krause, Anna and Hotho, Andreas},
+	booktitle    = {Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
+	location     = {Cham},
+	publisher    = {Springer Nature Switzerland},
+	series       = {Communications in Computer and Information Science},
+	pages        = {79--96},
+	doi          = {10.1007/978-3-031-23633-4_7},
+	isbn         = {978-3-031-23633-4},
+	abstract     = {Occupational fraud within companies currently causes losses of around 5\% of company revenue each year. While enterprise resource planning systems can enable automated detection of occupational fraud through recording large amounts of company data, the use of state-of-the-art machine learning approaches in this domain is limited by their untraceable decision process. In this study, we evaluate whether machine learning combined with explainable artificial intelligence can provide both strong performance and decision traceability in occupational fraud detection. We construct an evaluation setting that assesses the comprehensibility of machine learning-based occupational fraud detection approaches, and evaluate both performance and comprehensibility of multiple approaches with explainable artificial intelligence. Our study finds that high detection performance does not necessarily indicate good explanation quality, but specific approaches provide both satisfactory performance and decision traceability, highlighting the suitability of machine learning for practical application in occupational fraud detection and the importance of research evaluating both performance and comprehensibility together.},
+	editor       = {Koprinska, Irena and Mignone, Paolo and Guidotti, Riccardo and Jaroszewicz, Szymon and Fröning, Holger and Gullo, Francesco and Ferreira, Pedro M. and Roqueiro, Damian and Ceddia, Gaia and Nowaczyk, Slawomir and Gama, João and Ribeiro, Rita and Gavaldà, Ricard and Masciari, Elio and Ras, Zbigniew and Ritacco, Ettore and Naretto, Francesca and Theissler, Andreas and Biecek, Przemyslaw and Verbeke, Wouter and Schiele, Gregor and Pernkopf, Franz and Blott, Michaela and Bordino, Ilaria and Danesi, Ivan Luciano and Ponti, Giovanni and Severini, Lorenzo and Appice, Annalisa and Andresini, Giuseppina and Medeiros, Ibéria and Graça, Guilherme and Cooper, Lee and Ghazaleh, Naghmeh and Richiardi, Jonas and Saldana, Diego and Sechidis, Konstantinos and Canakoglu, Arif and Pido, Sara and Pinoli, Pietro and Bifet, Albert and Pashami, Sepideh},
+	date         = 2023,
+	langid       = {english},
+	keywords     = {Anomaly detection, {ERP}, Fraud detection, {XAI}},
 }
-
 @misc{tritscher_open_2022,
-	title = {Open {ERP} System Data For Occupational Fraud Detection},
-	url = {http://arxiv.org/abs/2206.04460},
-	doi = {10.48550/arXiv.2206.04460},
-	abstract = {Recent estimates report that companies lose 5\% of their revenue to occupational fraud. Since most medium-sized and large companies employ Enterprise Resource Planning ({ERP}) systems to track vast amounts of information regarding their business process, researchers have in the past shown interest in automatically detecting fraud through {ERP} system data. Current research in this area, however, is hindered by the fact that {ERP} system data is not publicly available for the development and comparison of fraud detection methods. We therefore endeavour to generate public {ERP} system data that includes both normal business operation and fraud. We propose a strategy for generating {ERP} system data through a serious game, model a variety of fraud scenarios in cooperation with auditing experts, and generate data from a simulated make-to-stock production company with multiple research participants. We aggregate the generated data into ready to used datasets for fraud detection in {ERP} systems, and supply both the raw and aggregated data to the general public to allow for open development and comparison of fraud detection approaches on {ERP} system data.},
-	number = {{arXiv}:2206.04460},
-	publisher = {{arXiv}},
-	author = {Tritscher, Julian and Gwinner, Fabian and Schlör, Daniel and Krause, Anna and Hotho, Andreas},
-	urldate = {2023-11-17},
-	date = {2022-07-13},
-	eprinttype = {arxiv},
-	eprint = {2206.04460 [cs]},
-	keywords = {Computer Science - Artificial Intelligence},
-	file = {arXiv Fulltext PDF:/Users/coeus/Zotero/storage/H66VLRBE/Tritscher et al. - 2022 - Open ERP System Data For Occupational Fraud Detect.pdf:application/pdf;arXiv.org Snapshot:/Users/coeus/Zotero/storage/ZTK7ICM4/2206.html:text/html},
+	title        = {Open {ERP} System Data For Occupational Fraud Detection},
+	author       = {Tritscher, Julian and Gwinner, Fabian and Schlör, Daniel and Krause, Anna and Hotho, Andreas},
+	publisher    = {{arXiv}},
+	number       = {{arXiv}:2206.04460},
+	doi          = {10.48550/arXiv.2206.04460},
+	url          = {http://arxiv.org/abs/2206.04460},
+	urldate      = {2023-11-17},
+	abstract     = {Recent estimates report that companies lose 5\% of their revenue to occupational fraud. Since most medium-sized and large companies employ Enterprise Resource Planning ({ERP}) systems to track vast amounts of information regarding their business process, researchers have in the past shown interest in automatically detecting fraud through {ERP} system data. Current research in this area, however, is hindered by the fact that {ERP} system data is not publicly available for the development and comparison of fraud detection methods. We therefore endeavour to generate public {ERP} system data that includes both normal business operation and fraud. We propose a strategy for generating {ERP} system data through a serious game, model a variety of fraud scenarios in cooperation with auditing experts, and generate data from a simulated make-to-stock production company with multiple research participants. We aggregate the generated data into ready to used datasets for fraud detection in {ERP} systems, and supply both the raw and aggregated data to the general public to allow for open development and comparison of fraud detection approaches on {ERP} system data.},
+	date         = {2022-07-13},
+	eprinttype   = {arxiv},
+	eprint       = {2206.04460 [cs]},
+	keywords     = {Computer Science - Artificial Intelligence},
 }
-
 @article{hofmann_security_2021,
-	title = {Security Implications of Consortium Blockchains: The Case of Ethereum Networks},
-	volume = {12},
-	issn = {2190-3387},
-	url = {https://www.jipitec.eu/issues/jipitec-12-4-2021/5453},
-	shorttitle = {Security Implications of Consortium Blockchains},
-	number = {4},
+	title        = {Security Implications of Consortium Blockchains: The Case of Ethereum Networks},
+	shorttitle   = {Security Implications of Consortium Blockchains},
+	author       = {Hofmann, Adrian and Gwinner, Fabian and Winkelmann, Axel and Janiesch, Christian},
+	volume       = 12,
+	number       = 4,
+	issn         = {2190-3387},
+	url          = {https://www.jipitec.eu/issues/jipitec-12-4-2021/5453},
 	journaltitle = {jipitec},
-	author = {Hofmann, Adrian and Gwinner, Fabian and Winkelmann, Axel and Janiesch, Christian},
-	date = {2021-12-12},
-	file = {Security Implications of Consortium Blockchains\: The Case of Ethereum Networks — jipitec:/Users/coeus/Zotero/storage/6IWLMZL2/5453.html:text/html},
+	date         = {2021-12-12},
 }
-
 @inproceedings{schaschek_black_2023,
-	location = {Cham},
-	title = {From Black Box to Glass Box: Evaluating Faithfulness of Process Predictions with {GCNNs}},
-	series = {Communications in Computer and Information Science},
-	abstract = {The volatile digital economy forces enterprises to tap into the potential of data-driven decision-making. Accordingly, proactive management of business processes is increasingly gaining momentum in information system research. In addition to the superior model performance of predictive models, the explainability of deep learning models becomes a crucial requirement for real-world applications. Although recent works on explainable predictive business process monitoring propose various explainability approaches, preliminary research has been conducted on evaluating explanations regarding their faithfulness. Since human-created ground truth for evaluating algorithms is often unavailable or subjective, objective metrics are needed to assess the faithfulness of explanations. We contribute to this research gap by quantitatively and qualitatively investigating the capabilities of different explainability methods for Graph Convolutional Neural Networks in the context of outcome prediction.},
-	booktitle = {Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
-	publisher = {Springer Nature Switzerland},
-	author = {Schaschek, Myriam and Gwinner, Fabian and Hein, Benedikt and Winkelmann, Axel},
-	date = {2023-10-01},
-	langid = {english},
-	file = {Schaschek et al. - From Black Box to Glass Box Evaluating Faithfulne.pdf:/Users/coeus/Zotero/storage/H42949YB/Schaschek et al. - From Black Box to Glass Box Evaluating Faithfulne.pdf:application/pdf},
+	title        = {From Black Box to Glass Box: Evaluating Faithfulness of Process Predictions with {GCNNs}},
+	author       = {Schaschek, Myriam and Gwinner, Fabian and Hein, Benedikt and Winkelmann, Axel},
+	booktitle    = {Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
+	location     = {Cham},
+	publisher    = {Springer Nature Switzerland},
+	series       = {Communications in Computer and Information Science},
+	abstract     = {The volatile digital economy forces enterprises to tap into the potential of data-driven decision-making. Accordingly, proactive management of business processes is increasingly gaining momentum in information system research. In addition to the superior model performance of predictive models, the explainability of deep learning models becomes a crucial requirement for real-world applications. Although recent works on explainable predictive business process monitoring propose various explainability approaches, preliminary research has been conducted on evaluating explanations regarding their faithfulness. Since human-created ground truth for evaluating algorithms is often unavailable or subjective, objective metrics are needed to assess the faithfulness of explanations. We contribute to this research gap by quantitatively and qualitatively investigating the capabilities of different explainability methods for Graph Convolutional Neural Networks in the context of outcome prediction.},
+	date         = {2023-10-01},
+	langid       = {english},
 }
-
 @inproceedings{tritscher_financial_2021,
-	title = {A financial game with opportunities for fraud},
-	url = {https://ieeexplore.ieee.org/abstract/document/9619070},
-	doi = {10.1109/CoG52621.2021.9619070},
-	abstract = {Even though companies store large amounts of business data in enterprise resource planning ({ERP}) systems, obtaining data for financial fraud detection is prohibitively difficult due to privacy concerns and companies protecting trade secrets. One possible solution is game-based generation of synthetic {ERP} data, which poses the challenge of designing an environment that generates realistic {ERP} data and allows players to commit many different types of fraud. In this work, we design a multiplayer game that allows players to cooperatively run a fictional company, while simultaneously challenging them to maximize their personal gain. We introduce an approach for letting players explore fraud scenarios through emergent gameplay and present a prototype that may be primed with information from real world {ERP} systems to generate realistic data.},
-	eventtitle = {2021 {IEEE} Conference on Games ({CoG})},
-	pages = {1--5},
-	booktitle = {2021 {IEEE} Conference on Games ({CoG})},
-	author = {Tritscher, Julian and Krause, Anna and Schlör, Daniel and Gwinner, Fabian and Von Mammen, Sebastian and Hotho, Andreas},
-	urldate = {2023-11-17},
-	date = {2021-08},
-	note = {{ISSN}: 2325-4289},
-	file = {IEEE Xplore Full Text PDF:/Users/coeus/Zotero/storage/5AAP6QBA/Tritscher et al. - 2021 - A financial game with opportunities for fraud.pdf:application/pdf},
+	title        = {A financial game with opportunities for fraud},
+	author       = {Tritscher, Julian and Krause, Anna and Schlör, Daniel and Gwinner, Fabian and Von Mammen, Sebastian and Hotho, Andreas},
+	booktitle    = {2021 {IEEE} Conference on Games ({CoG})},
+	pages        = {1--5},
+	doi          = {10.1109/CoG52621.2021.9619070},
+	url          = {https://ieeexplore.ieee.org/abstract/document/9619070},
+	urldate      = {2023-11-17},
+	note         = {{ISSN}: 2325-4289},
+	abstract     = {Even though companies store large amounts of business data in enterprise resource planning ({ERP}) systems, obtaining data for financial fraud detection is prohibitively difficult due to privacy concerns and companies protecting trade secrets. One possible solution is game-based generation of synthetic {ERP} data, which poses the challenge of designing an environment that generates realistic {ERP} data and allows players to commit many different types of fraud. In this work, we design a multiplayer game that allows players to cooperatively run a fictional company, while simultaneously challenging them to maximize their personal gain. We introduce an approach for letting players explore fraud scenarios through emergent gameplay and present a prototype that may be primed with information from real world {ERP} systems to generate realistic data.},
+	eventtitle   = {2021 {IEEE} Conference on Games ({CoG})},
+	date         = {2021-08},
 }
