--- a/publications.bib
+++ b/publications.bib
@@ -74,24 +74,24 @@
 	date         = {2021-08}
 }
 @article{GWINNER2024114248,
-  title = {Comparing expert systems and their explainability through similarity},
-  journal = {Decision Support Systems},
-  volume = {182},
-  pages = {114248},
-  year = {2024},
-  issn = {0167-9236},
-  doi = {https://doi.org/10.1016/j.dss.2024.114248},
-  url = {https://www.sciencedirect.com/science/article/pii/S0167923624000812},
-  author = {Fabian Gwinner and Christoph Tomitza and Axel Winkelmann},
-  keywords = {XAI, RSA, Machine learning, Similarity analysis, Explanation drift},
-  abstract = {In our work, we propose the use of Representational Similarity Analysis (RSA) for explainable AI (XAI) approaches to enhance the reliability of XAI-based decision support systems. To demonstrate how similarity analysis of explanations can assess the output stability of post-hoc explainers, we conducted a computational evaluative study. This study addresses how our approach can be leveraged to analyze the stability of explanations amidst various changes in the ML pipeline. Our results show that modifications such as altered preprocessing or different ML models lead to changes in the explanations and illustrate the extent to which stability can suffer. Explanation similarity analysis enables practitioners to compare different explanation outcomes, thus monitoring stability in explanations. Alongside discussing the results and practical applications in operationalized ML, including both benefits and limitations, we also delve into insights from computational neuroscience and neural information processing.}
+  title        = {Comparing expert systems and their explainability through similarity},
+  journal      = {Decision Support Systems},
+  volume       = {182},
+  pages        = {114248},
+  year         = {2024},
+  issn         = {0167-9236},
+  doi          = {https://doi.org/10.1016/j.dss.2024.114248},
+  url          = {https://www.sciencedirect.com/science/article/pii/S0167923624000812},
+  author       = {Fabian Gwinner and Christoph Tomitza and Axel Winkelmann},
+  keywords     = {XAI, RSA, Machine learning, Similarity analysis, Explanation drift},
+  abstract     = {In our work, we propose the use of Representational Similarity Analysis (RSA) for explainable AI (XAI) approaches to enhance the reliability of XAI-based decision support systems. To demonstrate how similarity analysis of explanations can assess the output stability of post-hoc explainers, we conducted a computational evaluative study. This study addresses how our approach can be leveraged to analyze the stability of explanations amidst various changes in the ML pipeline. Our results show that modifications such as altered preprocessing or different ML models lead to changes in the explanations and illustrate the extent to which stability can suffer. Explanation similarity analysis enables practitioners to compare different explanation outcomes, thus monitoring stability in explanations. Alongside discussing the results and practical applications in operationalized ML, including both benefits and limitations, we also delve into insights from computational neuroscience and neural information processing.}
 }
 @inproceedings{neis2024taxonomy,
-  title={A Taxonomy of Artificial Intelligence for Process Mining enhancement},
-  author={Neis, Nicolas and Gwinner, Fabian and Haueisen, Carolin},
-  booktitle={PACIS 2024 Proceedings},
-  pages={1--18}
-  url={https://aisel.aisnet.org/pacis2024/track09_digittrans/track09_digittrans/10/}
-  urldate = {2024-07-01},
-  year={2024-07-01},
+  title        ={A Taxonomy of Artificial Intelligence for Process Mining enhancement},
+  author       ={Neis, Nicolas and Gwinner, Fabian and Haueisen, Carolin},
+  booktitle    ={PACIS 2024 Proceedings},
+  pages        ={1--18},
+  url          ={https://aisel.aisnet.org/pacis2024/track09_digittrans/track09_digittrans/10/},
+  urldate      ={2024-07-01},
+  date         ={2024-07},
 }
